Note a bug and improve scrollbar

--- a/ui/widget.css
+++ b/ui/widget.css
@@ -39,6 +39,34 @@ b {
     }
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+::-webkit-scrollbar-track-piece {
+    background: transparent;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #777;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    background-clip: padding-box;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #606060;
+    border: 0;
+}
+
 main {
     position: absolute;
     top: 0;
